# android_common_driver_modules_wifi_bt_wifi

./: .gitignore  BUILD.bazel  Makefile
configs/: driver.mk  get_module.mk  project.txt  wifi_ko_list.bzl
configs/4_9/: Makefile  config.mk
configs/5_15/: Makefile  config.mk
configs/5_4/: Makefile  config.mk
