load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "wlan",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            ".git/**",
        ],
    ),
    outs = [
        "wlan_6174.ko",
        "vlsicomm.ko",
        "aml_sdio.ko",
        "8822cs.ko",
        "88x2cu.ko"
	],
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
