load("//build/kernel/kleaf:kernel.bzl", "kernel_module")
load("//driver_modules/wifi_bt/wifi:configs/wifi_ko_list.bzl", "wifi_list")

kernel_module(
    name = "wlan",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "**/*.bzl",
            ".git/**",
        ],
    ),
    outs = wifi_list,
    kernel_build = "//common:amlogic",
    visibility = [
        "//common:__pkg__",
    ],
)
